fixed image scaling on mobile

--- a/assets/scss/_lhd.scss
+++ b/assets/scss/_lhd.scss
@@ -1,5 +1,5 @@
 #map {
-	height: 1000px;
+	width: 600px;
 }
 
 p, ul {
